<resources>
    <string name="app_name">Мои финансы</string>
    <string name="expenses">Расходы</string>
    <string name="finance">Итоги</string>
    <string name="incomes">Доходы</string>
    <string name="select_incomes">Выбор доходов</string>
    <string name="select_expenses">Выбор расходов</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="period">Период</string>
    <string name="expense_icon">Значок расхода</string>
    <string name="add_income">Добавить доход</string>
    <string name="add_expenses">Добавить расход</string>
    <string name="check_all">Просмотр итого</string>
    <string name="today">Сегодня</string>
    <string name="add_expense">Добавление расхода</string>
    <string name="add_new_expense">Добавление траты</string>
    <string name="change_expense">Изменение траты</string>
    <string name="add">Добавить</string>
    <string name="total">Итого: </string>
    <string name="Incomes">Доходы больше!</string>
    <string name="Expenses">Расходы больше!</string>
    <string name="change">Изменить</string>
    <string name="input_price">Введите цену (₽)</string>
    <string name="input_income">Введите доход (₽)</string>
    <string name="category">Категория:</string>
    <string name="products">Продукты</string>
    <string name="eat">Кафе</string>
    <string name="home">Дом</string>
    <string name="gift">Подарки</string>
    <string name="graduate">Учеба</string>
    <string name="clothes">Одежда</string>
    <string name="unknown">Другое</string>
    <string name="health">Здоровье</string>
    <string name="transport">Транспорт</string>
    <string name="sport">Спорт</string>
    <string name="comment">Комментарий:</string>
    <string name="comment_">Комментарий</string>
    <string name="add_new_income">Добавление дохода</string>
    <string name="salary">Зарплата</string>
    <string name="bank">Банк</string>
    <string name="lucky">Удача</string>
    <string name="date_chose">Выбрать дату</string>
    <string name="exception">Ошибка!</string>
    <string name="input_empty_incomes">Введите доход и выберите категорию!</string>
    <string name="input_empty_expense">Введите цену и выберите категорию!</string>
    <string name="remove">Удалить</string>
    <string name="empty_data">Данных нет</string>
    <string name="expenses_finance_screen">"Расходы: "</string>
    <string name="incomes_finance_screen">Доходы:</string>
</resources>