<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/add_expense"
    tools:context=".presentation.activity.ExpensesActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_income"
        android:background="@drawable/frame"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:padding="8dp"
        android:paddingStart="24sp"
        android:paddingEnd="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineUp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:hint="@string/input_price"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:padding="4dp"
                android:textStyle="bold"
                android:paddingStart="24sp"
                android:paddingEnd="24sp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/editTextPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewCategory">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewSalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/cardViewBank"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="50dp"
                            android:src="@drawable/salesman_salesman_svgrepo_com"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/salary"
                            android:textSize="13sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewBank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cardViewLucky"
                    app:layout_constraintStart_toEndOf="@id/cardViewSalary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="50dp"
                            android:src="@drawable/bank_svgrepo_com"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank"
                            android:textSize="13sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewLucky"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardViewBank"
                    app:layout_constraintEnd_toStartOf="@id/cardViewGift">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="50dp"
                            android:src="@drawable/casino_slot_lucky_seven_svgrepo_com"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lucky"
                            android:textSize="13sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewGift"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardViewLucky"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="50dp"
                            android:src="@drawable/gift_svgrepo_com"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gift"
                            android:textSize="13sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textViewComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:paddingStart="24sp"
                    android:paddingEnd="24sp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/cardViewSalary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/black"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:hint="@string/comment_"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewComment" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="6dp"
                    android:padding="4dp"
                    android:paddingStart="24sp"
                    android:paddingEnd="24sp"
                    android:text="@string/date_chose"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextComment" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButtonCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@id/textViewDate"
                    app:layout_constraintStart_toEndOf="@+id/textViewDate"
                    app:layout_constraintTop_toTopOf="@id/textViewDate"
                    app:srcCompat="@drawable/calendar_lines_svgrepo_com"
                    app:tint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:backgroundTint="@color/my_blue"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:padding="8dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineLow" />
</androidx.constraintlayout.widget.ConstraintLayout>